--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
 PORT=4001
-MongoDBURI="mongodb://localhost:27017/bookStore"
+MongoDBURI="mongodb+srv://shaheryar:03062196090@cluster0.ctaho6d.mongodb.net/bookStore"
